# oxide-enzyme

./: .gitmodules  Cargo.toml  LLVMEnzyme-11.dylib  README.md  compile_debug.sh  compile_release.sh  output.txt  test.exec
enzyme/: Cargo.toml  main.ll
enzyme-proc-macro/: Cargo.toml
enzyme-proc-macro/src/: lib.rs
enzyme-sys/: Cargo.toml  build.rs
enzyme-sys/src/: enzyme_ffi.rs  lib.rs  typeinfo.rs
enzyme/src/: main.rs
example/: Cargo.toml  compile_release.sh
example/src/: main.rs
src/: file_parser.rs  ir_parser.rs  lib.rs  main.rs  post_processing.rs  structs.rs
