[package]
name = "oxide-enzyme"
version = "0.1.0"
authors = ["Tiberio Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "post"
path = "src/post_processing.rs"

[[bin]]
name = "oxide_enzyme"
path = "src/main.rs"

[profile.dev]
lto = "thin"
#panic = "abort"

[profile.release]
lto = "thin"
#panic = "abort"


[dependencies]
serde = {version = "1.0.117", features=["derive"]}
ndarray = "0.13.0"
matrixmultiply = "0.2.3"

serde_json = "1.0.59"
