[package]
name = "oxide-enzyme"
version = "0.1.0"
authors = ["Tiberio Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "post"
path = "src/post_processing.rs"

[[bin]]
name = "oxide_enzyme"
path = "src/main.rs"

[[bin]]
name = "ir-parser"
path = "src/ir_parser.rs"

[profile.release]
lto = "thin"
opt-level = 3
debug = 2
#debug-assertions = true
#panic = "abort"


[dependencies]
serde = {version = "1.0.117", features=["derive"]}
serde_json = "1.0.59"
regex = "1.4.2"

