[package]
name = "enzyme-proc-macro"
version = "0.1.0"
authors = ["tiberio <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = {version = "1.0.24"}
syn = {version = "1.0", features = ["full", "visit", "visit-mut", "fold", "extra-traits", "parsing", "printing"]}
quote = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.60"
