[package]
name = "oxidize-enzyme"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "110.0.0"
enzyme-sys = {path = "../enzyme-sys"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.60"
